renaming html elements

--- a/TPA1/TPA2/Site1.Master
+++ b/TPA1/TPA2/Site1.Master
@@ -37,20 +37,20 @@
 
 	</main> <!-- cd-main-content -->
 
-	<nav id="cd-lateral-nav">
-		<ul class="cd-navigation">
-			<li class="item-has-children">
+	<nav id="cd_lateral_nav">
+		<ul class="cd_navigation">
+			<li class="item_has_children">
 				<a href="#0">Services</a>
-				<ul class="sub-menu">
+				<ul class="sub_menu">
 					<li><a href="#0">Brand</a></li>
 					<li><a href="#0">Web Apps</a></li>
 					<li><a href="#0">Mobile Apps</a></li>
 				</ul>
 			</li> <!-- item-has-children -->
 
-			<li class="item-has-children">
+			<li class="item_has_children">
 				<a href="#0">Products</a>
-				<ul class="sub-menu">
+				<ul class="sub_menu">
 					<li><a href="#0">Product 1</a></li>
 					<li><a href="#0">Product 2</a></li>
 					<li><a href="#0">Product 3</a></li>
@@ -59,9 +59,9 @@
 				</ul>
 			</li> <!-- item-has-children -->
 
-			<li class="item-has-children">
+			<li class="item_has_children">
 				<a href="#0">Stockists</a>
-				<ul class="sub-menu">
+				<ul class="sub_menu">
 					<li><a href="#0">London</a></li>
 					<li><a href="#0">New York</a></li>
 					<li><a href="#0">Milan</a></li>
